// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.collapsiblePanel > rendering-collapsible-panel 1`] = `
.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c9 {
  color: rgb(77, 77, 77);
}

.c8 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c7 {
  display: inline-block;
  font-style: italic;
  font-weight: 400;
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0px;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc(-0.0375rem);
  width: auto;
  left: calc(-4px - 1.2rem);
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c2 {
  flex: 1 1 0%;
  line-height: 1.125rem;
  margin-left: calc(4px + 1.2rem);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(89, 102, 115);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: rgb(213, 0, 117);
  color: rgb(255, 255, 255);
  position: relative;
}

.c1:focus-within .c4 {
  color: rgb(255, 255, 255);
}

.c1:focus-within::before {
  border: 1px dotted rgb(255, 255, 255);
  inset: 0px;
  content: "";
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

<div
  class="c0 collapsiblePanel collapsible-panel-class"
  data-role="collapsible-panel"
  id="collapsible-panel-id"
  style="width: 90%;"
>
  <div
    aria-level="2"
    class="c1 collapsiblePanel__title"
    data-role="collapsible-panel-header"
    role="custom-role"
  >
    <div
      aria-expanded="true"
      class="c2 collapsiblePanel__label"
      data-role="collapsible-panel-title-wrapper"
      role="button"
      tabindex="0"
    >
      <div
        class="c3 collapsiblePanel__indicator"
        data-role="collapsible-panel-indicator"
      >
        <i
          class="c4 c5 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
      <div
        class="c6 collapsiblePanel__label--text"
        data-role="collapsible-panel-title"
      >
        Collapsible Panel title
      </div>
      <span
        class="c7 collapsiblePanel__label--info"
        data-role="collapsible-panel-info"
      >
         - 
        Data available
      </span>
    </div>
    <div
      class="c8 collapsiblePanel__add-ons"
      data-role="collapsiblePanel__add-ons"
    >
      <div
        class="collapsiblePanel__add-on"
        data-role="collapsible-panel-add-on"
      >
        Test Addon
      </div>
    </div>
  </div>
  <div
    class="c9 collapsiblePanel__content"
    data-role="collapsible-panel-content"
    role="document"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
    </p>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.collapsiblePanel > simulating-event-on-collapsible-panel 1`] = `
.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c7 {
  color: rgb(77, 77, 77);
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0px;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc(-0.0375rem);
  width: auto;
  left: calc(-4px - 1.2rem);
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c2 {
  flex: 1 1 0%;
  line-height: 1.125rem;
  margin-left: calc(4px + 1.2rem);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(89, 102, 115);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: rgb(213, 0, 117);
  color: rgb(255, 255, 255);
  position: relative;
}

.c1:focus-within .c4 {
  color: rgb(255, 255, 255);
}

.c1:focus-within::before {
  border: 1px dotted rgb(255, 255, 255);
  inset: 0px;
  content: "";
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

<div
  class="c0 collapsiblePanel collapsible-panel-class"
  data-role="collapsible-panel"
  id="collapsible-panel-id"
  style="width: 90%;"
>
  <div
    aria-level="2"
    class="c1 collapsiblePanel__title"
    data-role="collapsible-panel-header"
    role="custom-role"
  >
    <div
      aria-expanded="true"
      class="c2 collapsiblePanel__label"
      data-role="collapsible-panel-title-wrapper"
      role="button"
      tabindex="0"
    >
      <div
        class="c3 collapsiblePanel__indicator"
        data-role="collapsible-panel-indicator"
      >
        <i
          class="c4 c5 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
      <div
        class="c6 collapsiblePanel__label--text"
        data-role="collapsible-panel-title"
      >
        Collapsible Panel title
      </div>
    </div>
  </div>
  <div
    class="c7 collapsiblePanel__content"
    data-role="collapsible-panel-content"
    role="document"
  >
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.collapsiblePanel > simulating-event-on-collapsible-panel-multiple-addon 1`] = `
.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c8 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c8 .c4 {
  user-select: none;
}

.c8 .c4 {
  color: inherit;
}

.c8:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c8.c8 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c8.c8 > .c4 {
  display: block;
}

.c9 {
  color: rgb(77, 77, 77);
}

.c7 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0px;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc(-0.0375rem);
  width: auto;
  left: calc(-4px - 1.2rem);
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c2 {
  flex: 1 1 0%;
  line-height: 1.125rem;
  margin-left: calc(4px + 1.2rem);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(89, 102, 115);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: rgb(213, 0, 117);
  color: rgb(255, 255, 255);
  position: relative;
}

.c1:focus-within .c4 {
  color: rgb(255, 255, 255);
}

.c1:focus-within::before {
  border: 1px dotted rgb(255, 255, 255);
  inset: 0px;
  content: "";
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c8:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

<div
  class="c0 collapsiblePanel collapsible-panel-class"
  data-role="collapsible-panel"
  id="collapsible-panel-id"
  style="width: 90%;"
>
  <div
    aria-level="2"
    class="c1 collapsiblePanel__title"
    data-role="collapsible-panel-header"
    role="custom-role"
  >
    <div
      aria-expanded="true"
      class="c2 collapsiblePanel__label"
      data-role="collapsible-panel-title-wrapper"
      role="button"
      tabindex="0"
    >
      <div
        class="c3 collapsiblePanel__indicator"
        data-role="collapsible-panel-indicator"
      >
        <i
          class="c4 c5 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
      <div
        class="c6 collapsiblePanel__label--text"
        data-role="collapsible-panel-title"
      >
        Collapsible Panel title
      </div>
    </div>
    <div
      class="c7 collapsiblePanel__add-ons"
      data-role="collapsiblePanel__add-ons"
    >
      <div
        class="collapsiblePanel__add-on"
        data-role="collapsible-panel-add-on"
      >
        <button
          class="c8 button button--secondary"
          data-role="button"
          title=""
          type="button"
        >
          addon 1
        </button>
      </div>
      <div
        class="collapsiblePanel__add-on"
        data-role="collapsible-panel-add-on"
      >
        <button
          class="c8 button button--secondary"
          data-role="button"
          title=""
          type="button"
        >
          addon 2
        </button>
      </div>
    </div>
  </div>
  <div
    class="c9 collapsiblePanel__content"
    data-role="collapsible-panel-content"
    role="document"
  >
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.collapsiblePanel > simulating-event-on-collapsible-panel-single-addon 1`] = `
.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c8 {
  color: rgb(77, 77, 77);
}

.c7 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0px;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc(-0.0375rem);
  width: auto;
  left: calc(-4px - 1.2rem);
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c2 {
  flex: 1 1 0%;
  line-height: 1.125rem;
  margin-left: calc(4px + 1.2rem);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(89, 102, 115);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: rgb(213, 0, 117);
  color: rgb(255, 255, 255);
  position: relative;
}

.c1:focus-within .c4 {
  color: rgb(255, 255, 255);
}

.c1:focus-within::before {
  border: 1px dotted rgb(255, 255, 255);
  inset: 0px;
  content: "";
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

<div
  class="c0 collapsiblePanel collapsible-panel-class"
  data-role="collapsible-panel"
  id="collapsible-panel-id"
  style="width: 90%;"
>
  <div
    aria-level="2"
    class="c1 collapsiblePanel__title"
    data-role="collapsible-panel-header"
    role="custom-role"
  >
    <div
      aria-expanded="true"
      class="c2 collapsiblePanel__label"
      data-role="collapsible-panel-title-wrapper"
      role="button"
      tabindex="0"
    >
      <div
        class="c3 collapsiblePanel__indicator"
        data-role="collapsible-panel-indicator"
      >
        <i
          class="c4 c5 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
      <div
        class="c6 collapsiblePanel__label--text"
        data-role="collapsible-panel-title"
      >
        Collapsible Panel title
      </div>
    </div>
    <div
      class="c7 collapsiblePanel__add-ons"
      data-role="collapsiblePanel__add-ons"
    >
      <div
        class="collapsiblePanel__add-on"
        data-role="collapsible-panel-add-on"
      >
        addon
      </div>
    </div>
  </div>
  <div
    class="c8 collapsiblePanel__content"
    data-role="collapsible-panel-content"
    role="document"
  >
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.collapsiblePanel > swap positions of addons and graphic icon 1`] = `
.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c10 .c6 {
  user-select: none;
}

.c10 .c6 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c10.c10 > .c6 {
  display: block;
}

.c8 {
  color: rgb(77, 77, 77);
}

.c2 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c4 {
  display: inline;
}

.c9 .c6 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c5 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0px;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc(-0.0375rem);
  width: auto;
  right: 0px;
}

.c5 .c6 {
  color: inherit;
  font-size: calc(1.2rem);
}

.c3 {
  flex: 1 1 0%;
  line-height: 1.125rem;
  margin-left: 4px;
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(89, 102, 115);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: rgb(213, 0, 117);
  color: rgb(255, 255, 255);
  position: relative;
}

.c1:focus-within .c6 {
  color: rgb(255, 255, 255);
}

.c1:focus-within::before {
  border: 1px dotted rgb(255, 255, 255);
  inset: 0px;
  content: "";
  position: absolute;
  pointer-events: none;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: rgb(213, 0, 117);
    box-shadow: none;
    cursor: pointer;
  }
}

<div
  class="c0 collapsiblePanel collapsible-panel-class"
  data-role="collapsible-panel"
  id="collapsible-panel-id"
  style="width: 90%;"
>
  <div
    aria-level="2"
    class="c1 collapsiblePanel__title"
    data-role="collapsible-panel-header"
    role="custom-role"
  >
    <div
      class="c2 collapsiblePanel__add-ons"
      data-role="collapsiblePanel__add-ons"
    >
      <div
        class="collapsiblePanel__add-on"
        data-role="collapsible-panel-add-on"
      >
        addon
      </div>
    </div>
    <div
      aria-expanded="true"
      class="c3 collapsiblePanel__label"
      data-role="collapsible-panel-title-wrapper"
      role="button"
      tabindex="0"
    >
      <div
        class="c4 collapsiblePanel__label--text"
        data-role="collapsible-panel-title"
      >
        Collapsible Panel title
      </div>
      <div
        class="c5 collapsiblePanel__indicator"
        data-role="collapsible-panel-indicator"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
    </div>
  </div>
  <div
    class="c8 collapsiblePanel__content"
    data-role="collapsible-panel-content"
    role="document"
  >
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;
